@@ -115,6 +115,7 @@ processState.running.label=Running
 processState.finished.label=Finished
 
 script.directory.label=Script directory
+script.pythonfile.image=script.png
 
 about.text=about.html
 
